# cortex-forth-rp2040-aU

./: README.md  UNSTABLE
29-cortex-forth-a.d/doc/: notes.txt
29-cortex-forth-a.d/pico-examples/: CMakeLists.txt  README.md
29-cortex-forth-a.d/pico-examples/cortex-forth-a/: CMakeLists.txt  cortex-forth-a.c
29-cortex-forth-a.d/pico-examples/cortex-forth-a/Cortex-Forth/: CMakeLists.txt  Cortex-Forth.c  Cortex-Forth.h  rp2040_pico.inc
pre-built-uf2.d/: cortex-forth-a.uf2  cortex-forth-a.uf2.md5.txt  update.sh
